# sanskrit-transliteration

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
public/: splash.html
src/: App.tsx  conetext.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  main_shift.rs
